추가: Client , Server 기능
CRA 추가 (nav부분 작성) , 서버에 socket.io 사용해서 client 연결 및 테스트

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,21 @@ yarn-debug.kog*
 yarn-error.log*
 
 .vscode
+client/.vscode
+client/node_modules
+client/.pnp
+.pnp.js
+
+# testing
+client/coverage
+
+# production
+client/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
