--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.4.20",
+    "mqtt": "^4.2.6",
     "react-redux": "^5.0.7",
     "saslprep": "^1.0.3",
+    "socket.io": "^3.0.5",
+    "socket.io-client": "^3.1.0",
     "supports-color": "^7.1.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
+    "multer": "^1.4.2",
     "nodemon": "^1.19.1"
   }
 }
