--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "wonhyeonglee",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
